--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="/style.css" />
     <head>
-        <title>Registration Form</title>
+        <title>Sign up uh login uh</title>
     </head>
     <body>
-        <h1>Registration Form</h1>
+        <div>
+        <h1>XXXTENTACION fan-page Signin</h1>
         <form action="/confirm.html">
             <label for="fname">First Name:</label>
             <input type="text" name="First Name" id="f_name">
@@ -30,3 +32,7 @@
             <input type="submit" value="Submit">
         </form>
         <footer>
+
+        </footer>
+        </div>
+    </body>
