--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" href="/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <title>Sign up uh login uh</title>
     </head>
     <body>
         <div>
-        <h1>XXXTENTACION fan-page Signin</h1>
-        <form action="/confirm.html">
-            <label for="fname">First Name:</label>
-            <input type="text" name="First Name" id="f_name">
+        <h1 style="font-size:3vw">XXXTENTACION Fan-Page Signin</h1>
+        <form action="/about.html">
+            <label for="fname">First Name:</label><br>
+            <input type="text" name="First Name" id="box">
             <br>
             <br>
-            <label for="lname">Last Name:</label>
-            <input type="text" name="Last Name" id="l_name">
+            <label for="lname">Last Name:</label><br>
+            <input type="text" name="Last Name" id="box">
             <br>
             <br>
-            <label for="email">Email:</label>
-            <input type="email" name="mail" id="email">
+            <label for="email">Email:</label><br>
+            <input type="email" name="mail" id="box">
             <br>
             <br>
-            <label for="password">Password:</label>
-            <input type="password" name="password" id="password">
+            <label for="password">Password:</label><br>
+            <input type="password" name="password" id="box">
             <br>
             <br>
-            <label for="confirm">Confirm Password:</label>
-            <input type="password" name="Password" id="confirm_pass">
+            <label for="confirm">Confirm Password:</label><br>
+            <input type="password" name="Password" id="box">
             <br>
             <br>
             
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" id="submit">
         </form>
         <footer>
 
