I almost forgot to stage and commit

--- a/about.html
+++ b/about.html
@@ -5,12 +5,16 @@
     <head>
         <h1>Jahseh Dwyane Onfroy</h1>
         <h2>"XXXTENTACION"</h2>
+        <div class="Images">
         <img src="Media/x.jpg" id="x">
         <img src="Media/x2.jpg" id="x2">
         <img src="Media/x3.jpg" id="x3">
+    </div>
+    <br>
     </head>
     <body>
-
+        <div class="AboutContainer">
+        <div class="Bio">
         <h3>Biography</h3>
         <article>Jahseh Dwayne Ricardo Onfroy (January 23, 1998 – June 18, 2018), known professionally as XXXTentacion[b] was an American rapper, singer, and songwriter. Despite being a controversial figure due to his widely publicized legal issues, XXXTentacion gained a cult following among his young fanbase during his short career through his depression and alienation thematic driven music. He was often credited by critics and fans for his musical versatility, with his music exploring emo, trap, lo-fi, indie rock, nu metal, hip hop and punk rock.
 
@@ -19,6 +23,7 @@
             XXXTentacion rose to mainstream attention with the single "Look at Me". His debut album 17 (2017) was certified triple platinum by the RIAA. His second album ? (2018) debuted at number one on the Billboard 200, and the album's lead single, "Sad!", reached number one on the Billboard Hot 100.[6] On June 18, 2018, XXXTentacion was fatally shot at the age of 20, in a robbery at a motorcycle dealership in Deerfield Beach, Florida. The attackers fled the scene in an SUV after stealing from him a Louis Vuitton bag containing $50,000; four suspects were arrested. No trial date has been set for the accused.[7]
             
             XXXTentacion has RIAA-certified sales of 61 million units in the US and BPI-certified sales of over 7 million units in the UK, bringing his total to 68 million certified records sold within the two countries. Since his death, he has won an American Music Award, a BET Hip Hop Award, and received 11 Billboard Music Award nominations.[8] Two posthumous albums were released, Skins (2018) and Bad Vibes Forever (2019); the former became his second number-one album on the Billboard 200.</article>
+        </div>
             <br>
 
             <div class="quotes">
@@ -37,8 +42,10 @@
             </blockquote>
 
             <form action="/topsongs.html">
+            
             <input type="submit" value="Submit" id="submit">
         </form>
         </div>
+    </div>
     </body>
 </html>
