--- a/topsongs.html
+++ b/topsongs.html
@@ -7,8 +7,17 @@
         <p>Moonlight</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/GX8Hg6kWQYI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         
+<article>"Moonlight" is a song written and performed by American rapper XXXTentacion from his second studio album "?". The song was posthumously sent to rhythmic radio as the album's third single on August 14, 2018. 
+    The song reached many chart positions globally, including a number 13 peak on the Billboard Hot 100 as well as a platinum certification following his death. It's therefore tied with "Falling Down" (with Lil Peep) 
+    as his third-highest charting song in the United States, with both songs falling behind "Sad!" and "Don't Cry" (with Lil Wayne).</article>
+
         <p>SAD!</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/pgN-vvVVxMA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <article>"Sad!" (stylized in all-caps) is a song by American rapper XXXTentacion from his second studio album, "?"" (2018). It was released as the lead single from the album on March 2, 2018. The track was produced by John 
+        Cunningham, and written by XXXTentacion. The song is XXXTentacion's highest charting in the United States, peaking at number one on the Billboard Hot 100 following his death on June 18, 2018.
+        A music video for the song was released on June 28, via his YouTube channel.
+</article>
     </head>
 
     <
