--- a/about.html
+++ b/about.html
@@ -3,6 +3,13 @@
     <link rel="stylesheet" href="/about.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">Home</a>
+            <a href="#contact">Media</a>
+            <a href="#about">About</a>
+          </div>
+
         <h1>Jahseh Dwyane Onfroy</h1>
         <h2>"XXXTENTACION"</h2>
         <div class="Images">
