--- a/topsongs.html
+++ b/topsongs.html
@@ -3,6 +3,13 @@
     <link rel="stylesheet" href="/topsongs.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">Home</a>
+            <a href="#contact">Media</a>
+            <a href="#about">About</a>
+          </div>
+
         <h1>Top Songs</h1>
         <p>Moonlight</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/GX8Hg6kWQYI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -18,7 +25,13 @@
         Cunningham, and written by XXXTentacion. The song is XXXTentacion's highest charting in the United States, peaking at number one on the Billboard Hot 100 following his death on June 18, 2018.
         A music video for the song was released on June 28, via his YouTube channel.
 </article>
+        <p>BAD!</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gVqcUi9tpCw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+        <article>"Bad" was previously teased along with three album projects XXXTentacion was set to release in 2018 before his death in June.[3] Publications reported that "Bad" would appear on Skins after a clip of XXXTentacion was posted to his 
+        Instagram timeline of him talking about the album after singing a line from it. DJ Scheme also said that the next of XXXTentacion's projects to be released would be Skins; 
+        this was confirmed in November after the pre-order for the album became available.</article>
     </head>
 
-    <
+  
 </html>
