--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
         <title>Sign up uh login uh</title>
     </head>
     <body>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">Home</a>
+            <a href="#contact">Media</a>
+            <a href="#about">About</a>
+          </div>
+
         <div>
         <h1 style="font-size:3vw">XXXTENTACION Fan-Page Signin</h1>
         <form action="/about.html">
